// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`animal@2 golden output > flat art, E (spread): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 62.95,
  "drawCalls": 32687,
  "drawing": "25a4ab53e383465d",
  "lipGapPx": 82.45,
  "mesh": "65570a1097858889",
}
`;

exports[`animal@2 golden output > flat art, FF: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 1.01,
  "drawCalls": 32604,
  "drawing": "4a078280967ed300",
  "lipGapPx": 1.14,
  "mesh": "e40299fe44647bf1",
}
`;

exports[`animal@2 golden output > flat art, TH, tongue up: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 31.83,
  "drawCalls": 32687,
  "drawing": "d256db8605c4c351",
  "lipGapPx": 40.55,
  "mesh": "29dfd3446b56f9ca",
}
`;

exports[`animal@2 golden output > flat art, aa (open): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 100.5,
  "drawCalls": 32687,
  "drawing": "56b9d2a5f10454a8",
  "lipGapPx": 126.24,
  "mesh": "7de75622100960a9",
}
`;

exports[`animal@2 golden output > flat art, blink full: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 0,
  "drawCalls": 32752,
  "drawing": "23d4ef721d0b7437",
  "lipGapPx": 0.83,
  "mesh": "99b37c21cc3866fd",
}
`;

exports[`animal@2 golden output > flat art, oh (rounded): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 73.97,
  "drawCalls": 32687,
  "drawing": "12f172710fa8014f",
  "lipGapPx": 93.08,
  "mesh": "2085f88aeca10a29",
}
`;

exports[`animal@2 golden output > flat art, rest: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 0,
  "drawCalls": 32604,
  "drawing": "5eb8ba24397179ec",
  "lipGapPx": 0.83,
  "mesh": "99b37c21cc3866fd",
}
`;

exports[`animal@2 golden output > render, E (spread): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 62.95,
  "drawCalls": 32785,
  "drawing": "47e1f9ed5b7f90ac",
  "lipGapPx": 82.45,
  "mesh": "65570a1097858889",
}
`;

exports[`animal@2 golden output > render, FF: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 1.01,
  "drawCalls": 32604,
  "drawing": "4a078280967ed300",
  "lipGapPx": 1.14,
  "mesh": "e40299fe44647bf1",
}
`;

exports[`animal@2 golden output > render, TH, tongue up: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 31.83,
  "drawCalls": 32785,
  "drawing": "e1ff3d109f937988",
  "lipGapPx": 40.55,
  "mesh": "29dfd3446b56f9ca",
}
`;

exports[`animal@2 golden output > render, aa (open): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 100.5,
  "drawCalls": 32785,
  "drawing": "fe15535329b92d75",
  "lipGapPx": 126.24,
  "mesh": "7de75622100960a9",
}
`;

exports[`animal@2 golden output > render, blink full: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 0,
  "drawCalls": 32764,
  "drawing": "412d047254b91aed",
  "lipGapPx": 0.83,
  "mesh": "99b37c21cc3866fd",
}
`;

exports[`animal@2 golden output > render, oh (rounded): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 73.97,
  "drawCalls": 32785,
  "drawing": "e059c1d02ec1d520",
  "lipGapPx": 93.08,
  "mesh": "2085f88aeca10a29",
}
`;

exports[`animal@2 golden output > render, rest: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 0,
  "drawCalls": 32604,
  "drawing": "5eb8ba24397179ec",
  "lipGapPx": 0.83,
  "mesh": "99b37c21cc3866fd",
}
`;

exports[`toon@1 golden output > flat art, E (spread): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 55.37,
  "drawCalls": 32731,
  "drawing": "0f79013138836b2d",
  "lipGapPx": 73,
  "mesh": "45c852583a1a61af",
}
`;

exports[`toon@1 golden output > flat art, FF: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 16.54,
  "drawCalls": 32690,
  "drawing": "2c6d7bbf05d0a397",
  "lipGapPx": 26.31,
  "mesh": "6fcce7f20e23beea",
}
`;

exports[`toon@1 golden output > flat art, TH, tongue up: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 27.7,
  "drawCalls": 32731,
  "drawing": "83cfa2648fe2883a",
  "lipGapPx": 35.39,
  "mesh": "408d13cdb3eef356",
}
`;

exports[`toon@1 golden output > flat art, aa (open): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 87.41,
  "drawCalls": 32731,
  "drawing": "25d5f436066866df",
  "lipGapPx": 109.91,
  "mesh": "7c2ecd3f2843ad8c",
}
`;

exports[`toon@1 golden output > flat art, blink full: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 0,
  "drawCalls": 32752,
  "drawing": "23d4ef721d0b7437",
  "lipGapPx": 0.83,
  "mesh": "99b37c21cc3866fd",
}
`;

exports[`toon@1 golden output > flat art, oh (rounded): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 64.32,
  "drawCalls": 32731,
  "drawing": "51493be4b0f8923d",
  "lipGapPx": 81.05,
  "mesh": "748407e83c0baa0e",
}
`;

exports[`toon@1 golden output > flat art, rest: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 0,
  "drawCalls": 32604,
  "drawing": "5eb8ba24397179ec",
  "lipGapPx": 0.83,
  "mesh": "99b37c21cc3866fd",
}
`;

exports[`toon@1 golden output > render, E (spread): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 55.37,
  "drawCalls": 32842,
  "drawing": "ae9ba159a950486b",
  "lipGapPx": 73,
  "mesh": "45c852583a1a61af",
}
`;

exports[`toon@1 golden output > render, FF: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 16.54,
  "drawCalls": 32751,
  "drawing": "631a0876daa6fcbe",
  "lipGapPx": 26.31,
  "mesh": "6fcce7f20e23beea",
}
`;

exports[`toon@1 golden output > render, TH, tongue up: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 27.7,
  "drawCalls": 32842,
  "drawing": "784d3261a11e02d8",
  "lipGapPx": 35.39,
  "mesh": "408d13cdb3eef356",
}
`;

exports[`toon@1 golden output > render, aa (open): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 87.41,
  "drawCalls": 32842,
  "drawing": "a9f57131c350e279",
  "lipGapPx": 109.91,
  "mesh": "7c2ecd3f2843ad8c",
}
`;

exports[`toon@1 golden output > render, blink full: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 0,
  "drawCalls": 32764,
  "drawing": "412d047254b91aed",
  "lipGapPx": 0.83,
  "mesh": "99b37c21cc3866fd",
}
`;

exports[`toon@1 golden output > render, oh (rounded): mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 64.32,
  "drawCalls": 32842,
  "drawing": "86d25025907e011b",
  "lipGapPx": 81.05,
  "mesh": "748407e83c0baa0e",
}
`;

exports[`toon@1 golden output > render, rest: mesh and drawing are unchanged 1`] = `
{
  "chinDropPx": 0,
  "drawCalls": 32604,
  "drawing": "5eb8ba24397179ec",
  "lipGapPx": 0.83,
  "mesh": "99b37c21cc3866fd",
}
`;
